# cegui-dependencies

./: .gitignore  .hgignore  CEGUI-DEPENDENCIES-README.txt  CMakeLists.txt  README.md  cross_compile.cmake  msvc_postbuild.cmake
cmake/: CEGUI-deps-macros.cmake  FindDirectXSDK.cmake  msvc_postbuild.cmake
src/D3D11Effects/: Effect.h  EffectLoad.cpp  EffectNonRuntime.cpp  EffectVariable.inl  d3dxGlobal.cpp  directx-sdk-license.rtf  pchfx.h
src/D3D11Effects/Binary/: SOParser.h
src/D3D11Effects/CEGUI-BUILD/: CMakeLists.txt
src/D3D11Effects/Inc/: d3d11-effects-mingw-supplements.h  d3dx11effect.h  d3dxGlobal.h
src/FreeImage-3.15.0/CEGUI-BUILD/: CMakeLists.txt
src/FreeImage-3.15.0/Source/: FreeImage.h
src/FreeImage-3.15.0/Source/FreeImage/: PluginTIFF.cpp
src/FreeImage-3.15.0/Source/LibOpenJPEG/: opj_includes.h
src/SILLY/CEGUI-BUILD/: CMakeLists.txt
src/SILLY/src/loaders/: SILLYPNGImageLoader.cpp
src/corona-1.0.2/CEGUI-BUILD/: CMakeLists.txt
src/corona-1.0.2/src/: corona.h
src/devil-1.7.8/CEGUI-BUILD/: CMakeLists.txt
src/devil-1.7.8/include/IL/: devil_internal_exports.h
src/devil-1.7.8/src-IL/include/: il_endian.h  il_manip.h
src/devil-1.7.8/src-IL/src/: il_endian.c  il_manip.c  il_png.c
src/devil-1.7.8/src-ILU/include/: ilu_internal.h
src/devil-1.7.8/src-ILU/src/: ilu_internal.c
src/expat-2.0.1/: CMakeLists.txt
src/expat-2.0.1/CEGUI-BUILD/: CMakeLists.txt
src/expat-2.0.1/lib/: expat.def  expat_d.def  libexpat.def  libexpat_d.def  libexpatw.def
src/freeglut-2.6.0/CEGUI-BUILD/: CMakeLists.txt
src/freeglut-2.6.0/include/GL/: freeglut_std.h
src/freetype-2.11.1/CEGUI-BUILD/: CMakeLists.txt
src/freetype-2.4.4/: CMakeLists.txt
src/freetype-2.4.4/CEGUI-BUILD/: CMakeLists.txt
src/freetype-2.6.3/: CMakeLists.txt  ChangeLog  ChangeLog.20  ChangeLog.21  ChangeLog.22  ChangeLog.23  ChangeLog.24  ChangeLog.25  Jamfile  README
src/freetype-2.6.3/CEGUI-BUILD/: CMakeLists.txt
src/freetype-2.6.3/builds/: exports.mk
src/freetype-2.6.3/builds/unix/: config.guess  config.sub  configure  configure.ac  configure.raw  unix-cc.in
src/freetype-2.6.3/devel/: ftoption.h
src/freetype-2.6.3/docs/: CHANGES  freetype-config.1  release
src/freetype-2.6.3/docs/reference/: ft2-auto_hinter.html  ft2-base_interface.html  ft2-basic_types.html  ft2-bdf_fonts.html  ft2-bitmap_handling.html  ft2-bzip2.html  ft2-cache_subsystem.html  ft2-cff_driver.html  ft2-cid_fonts.html  ft2-computations.html  ft2-error_code_values.html  ft2-error_enumerations.html  ft2-font_formats.html  ft2-gasp_table.html  ft2-glyph_management.html  ft2-glyph_stroker.html  ft2-glyph_variants.html  ft2-gx_validation.html  ft2-gzip.html  ft2-header_file_macros.html  ft2-header_inclusion.html  ft2-incremental.html  ft2-index.html  ft2-lcd_filtering.html  ft2-list_processing.html  ft2-lzw.html  ft2-mac_specific.html  ft2-module_management.html  ft2-multiple_masters.html  ft2-ot_validation.html  ft2-outline_processing.html  ft2-pfr_fonts.html  ft2-quick_advance.html  ft2-raster.html  ft2-sfnt_names.html  ft2-sizes_management.html  ft2-system_interface.html  ft2-toc.html  ft2-truetype_engine.html  (+6 more)
src/freetype-2.7.1/CEGUI-BUILD/: CMakeLists.txt
src/fribidi-0.19.7/CEGUI-BUILD/: CMakeLists.txt
src/fribidi-0.19.7/lib/: config.h  fribidi-common.h  fribidi-config.h
src/fribidi-1.0.11/: ChangeLog  Makefile.in  aclocal.m4  configure
src/fribidi-1.0.11/CEGUI-BUILD/: CMakeLists.txt  config.h.in
src/fribidi-1.0.11/doc/: Makefile.in  fribidi_charset_to_unicode.3  fribidi_debug_status.3  fribidi_get_bidi_type.3  fribidi_get_bidi_type_name.3  fribidi_get_bidi_types.3  fribidi_get_bracket.3  fribidi_get_bracket_types.3  fribidi_get_joining_type.3  fribidi_get_joining_type_name.3  fribidi_get_joining_types.3  fribidi_get_mirror_char.3  fribidi_get_par_direction.3  fribidi_get_par_embedding_levels.3  fribidi_get_par_embedding_levels_ex.3  fribidi_get_type.3  fribidi_get_type_internal.3  fribidi_join_arabic.3  fribidi_log2vis.3  fribidi_log2vis_get_embedding_levels.3  fribidi_mirroring_status.3  fribidi_parse_charset.3  fribidi_remove_bidi_marks.3  fribidi_reorder_line.3  fribidi_reorder_nsm_status.3  fribidi_set_debug.3  fribidi_set_mirroring.3  fribidi_set_reorder_nsm.3  fribidi_shape.3  fribidi_shape_arabic.3  fribidi_shape_mirroring.3  fribidi_unicode_to_charset.3
src/fribidi-1.0.11/gen.tab/: Makefile.in
src/fribidi-1.0.11/lib/: Makefile.in
src/fribidi-1.0.11/test/: Makefile.in
src/glew-1.7.0/CEGUI-BUILD/: CMakeLists.txt
src/glfw-2.7.2/CEGUI-BUILD/: CMakeLists.txt
src/glfw-2.7.9/CEGUI-BUILD/: CMakeLists.txt
src/glm-0.9.3.1/CEGUI-BUILD/: CMakeLists.txt
src/harfbuzz-1.2.7/: config.h
src/harfbuzz-1.2.7/CEGUI-BUILD/: CMakeLists.txt
src/harfbuzz-1.2.7/src/: hb.h
src/harfbuzz-3.2.0/CEGUI-BUILD/: CMakeLists.txt  config.h.in
src/jpeg-8c/CEGUI-BUILD/: CMakeLists.txt
src/libmng-1.0.10/CEGUI-BUILD/: CMakeLists.txt
src/libpng-1.4.7/CEGUI-BUILD/: CMakeLists.txt
src/libpng-1.4.7/scripts/: pngwin.def  pngwin_d.def
src/libpng-1.5.2/CEGUI-BUILD/: CMakeLists.txt
src/libraqm-14-07-2016-clone/libraqm/: COPYING
src/libraqm-unversioned/CEGUI-BUILD/: CMakeLists.txt
src/libraqm-unversioned/libraqm/: .travis.yml  CODING.md  Makefile.am  NEWS  README  autogen.sh  configure.ac  git.mk  raqm.pc.in
src/libraqm-unversioned/src/: raqm.c  raqm.h
src/lua-5.1.4/CEGUI-BUILD/: CMakeLists.txt
src/pcre-8.12/CEGUI-BUILD/: CMakeLists.txt
src/pugixml-1.12.1/CEGUI-BUILD/: CMakeLists.txt
src/raqm-0.8.0/CEGUI-BUILD/: CMakeLists.txt  config.h.in
src/raqm-0.8.0/src/: raqm.c
src/raqm-0.9.0/CEGUI-BUILD/: CMakeLists.txt  config.h.in
src/tiff-3.9.5/CEGUI-BUILD/: CMakeLists.txt
src/tinyxml2-4.0.1/.git-CONFLICT-f4303fa98eb874f05836b160f057a747/: HEAD  config  index  packed-refs
src/tinyxml2-4.0.1/CEGUI-BUILD/: CMakeLists.txt
src/tinyxml2-4.0.1/tinyxml2/: test.vcxproj  tinyxml2.sln  tinyxml2.vcxproj
src/tinyxml2-9.0.0/CEGUI-BUILD/: CMakeLists.txt
src/tolua++-1.0.93/CEGUI-BUILD/: CMakeLists.txt
src/xerces-c-3.1.1/CEGUI-BUILD/: CMakeLists.txt
src/zlib-1.2.5/CEGUI-BUILD/: CMakeLists.txt
(+44 files in other folders)
